--- a/Eshop/Views/ContactUss/Index.cshtml
+++ b/Eshop/Views/ContactUss/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="ui-box bg-white">
             <div class="ui-box-title fs-5 fw-bold">تماس با ما</div>
             <div class="ui-box-subtitle flex-wrap">
-                لطفاً پیش از ارسال ایمیل یا تماس تلفنی، ابتدا <a href="#" class="link mx-2">پرسش های متداول</a>
+                لطفاً پیش از ارسال ایمیل یا تماس تلفنی، ابتدا <a href="/faq" class="link mx-2">پرسش های متداول</a>
                 را
                 مشاهده کنید.
             </div>
