--- a/Eshop/Views/Shared/_footer.cshtml
+++ b/Eshop/Views/Shared/_footer.cshtml
@@ -81,11 +81,8 @@
                     <div class="widget-title">خدمات مشتریان</div>
                     <div class="widget-content widget-list">
                         <ul>
-                            <li><a href="#">پاسخ به پرسشهای متداول</a></li>
-                            <li><a href="#">رویه های بازگرداندن کالا</a></li>
-                            <li><a href="#">شرایط استفاده</a></li>
-                            <li><a href="#">حریم خصوصی</a></li>
-                            <li><a href="#">گزارش باگ</a></li>
+                            <li><a href="/faq">پاسخ به پرسشهای متداول</a></li>
+                            @await Component.InvokeAsync("DynamicPages")
                         </ul>
                     </div>
                 </div>
