--- a/Eshop/Views/Shared/_header.cshtml
+++ b/Eshop/Views/Shared/_header.cshtml
@@ -1,8 +1,11 @@
 ﻿@using Application.Interface
 @using Application.Security
+@using Domain.Models.Banner
 @using Domain.ViewModels.DynamicLinks
 
-
+@{
+    var banners = ViewData["Banners"] as List<Banner>;
+}
 
 <div class="alert banner-container alert-dismissible fade show" role="alert">
     <a href="#" class="banner-placement rounded-0"
