--- a/Eshop/Areas/Admin/Views/Shared/_slide.cshtml
+++ b/Eshop/Areas/Admin/Views/Shared/_slide.cshtml
@@ -111,6 +111,31 @@
             </ul>
         </li>
        
+        <li>
+            <a href="#" class="menu-dropdown">
+                <i class="glyphicon glyphicon-picture"></i>
+                <span class="menu-text"> مدیریت بنر ها </span>
+
+                <i class="menu-expand"></i>
+            </a>
+            <ul class="submenu">
+                <li>
+                    <a href="/Admin/Banners">
+                        <span class="menu-text">لیست بنر ها</span>
+                    </a>
+                </li>
+
+            </ul>
+            <ul class="submenu">
+                <li>
+                    <a href="/Admin/AddBanner">
+                        <span class="menu-text">افزودن بنر</span>
+                    </a>
+                </li>
+
+            </ul>
+           
+        </li>
     </ul>
     <!-- /Sidebar Menu -->
 </div>
