--- a/Eshop/Areas/Admin/Views/Shared/_sideBar.cshtml
+++ b/Eshop/Areas/Admin/Views/Shared/_sideBar.cshtml
@@ -253,17 +253,17 @@
                                         <img src="assets/img/avatars/adam-jansen.jpg">
                                     </div>
                                     <section>
-                                        <h2><span class="profile"><span>دیوید استیونسون </span></span></h2>
+                                        <h2><span class="profile"><span>@User.Identity.Name </span></span></h2>
                                     </section>
                                 </a>
                                 <!--Login Area Dropdown-->
                                 <ul class="pull-right dropdown-menu dropdown-arrow dropdown-login-area">
-                                    <li class="username"><a>دیوید استیونسون</a></li>
+                                    <li class="username"><a>@User.Identity.Name </a></li>
                                     <li class="email"><a>David.Stevenson@live.com</a></li>
                                     <!--Avatar Area-->
                                     <li>
                                         <div class="avatar-area">
-                                            <img src="assets/img/avatars/adam-jansen.jpg" class="avatar">
+                                            <img src="/images/banners/93a9a618788545b5a37d033e675038ac.jpg" class="avatar">
                                             <span class="caption">تغییر تصویر</span>
                                         </div>
                                     </li>
