--- a/Eshop/Views/Shared/_header.cshtml
+++ b/Eshop/Views/Shared/_header.cshtml
@@ -7,12 +7,14 @@
     var banners = ViewData["Banners"] as List<Banner>;
 }
 
-<div class="alert banner-container alert-dismissible fade show" role="alert">
-    <a href="#" class="banner-placement rounded-0"
-       style="background-image: url(/site/theme-assets/images/banner/017.jpg);height: 60px;"></a>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
-
+@if (banners!=null&&banners.Any(c => c.Position == Domain.Models.Enums.BannerPosition.TopMost))
+{
+    <div class="alert banner-container alert-dismissible fade show" role="alert">
+        <a href="#" class="banner-placement rounded-0"
+       style="background-image: url(/Images/banners/@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.TopMost).ImageName);height: 60px;"></a>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
 
 
 <div class="page-header--top">
