--- a/Eshop/Views/Home/Index.cshtml
+++ b/Eshop/Views/Home/Index.cshtml
@@ -17,68 +17,59 @@
             </div>
         </div>
         <div class="row mb-5">
-            @if (banners!=null&&banners.Any(c => c.Position == Domain.Models.Enums.BannerPosition.Slide))
+            @if (banners != null && banners.Any(c => c.Position == Domain.Models.Enums.BannerPosition.Slide))
             {
                 <div class="col-lg-8 mb-lg-0 mb-4">
                     <!-- start of main-slider -->
-                <div class="swiper main-swiper-slider swiper-fade swiper-initialized swiper-horizontal swiper-pointer-events swiper-rtl">
+                <div class="swiper main-swiper-slider">
                         <!-- Additional required wrapper -->
-                    <div class="swiper-wrapper" id="swiper-wrapper-deb37d9d6bff6248" aria-live="off" style="transition-duration: 0ms;">
-                            @foreach (var item in banners.Where(c => c.Position == Domain.Models.Enums.BannerPosition.Slide))
-                            {
-                                <div class="swiper-slide main-swiper-slide swiper-slide-duplicate swiper-slide-duplicate-next" data-swiper-slide-index="3" role="group" aria-label="4 / 4" style="width: 856px; opacity: 0; transform: translate3d(0px, 0px, 0px); transition-duration: 0ms;">
-                                    <a href="@item.Link" style="background-image: url(/Images/banners/@item.ImageName);">
-                                        <img src="/Images/banners/@item.ImageName" alt="">
-                                    </a>
-                                </div>
-                            }
-                            @* <div class="swiper-slide main-swiper-slide" data-swiper-slide-index="0" role="group" aria-label="1 / 4" style="width: 856px; opacity: 0; transform: translate3d(856px, 0px, 0px); transition-duration: 0ms;">
-                                <a href="#" style="background-image: url(/site/theme-assets/images/slider/main/01.jpg);">
-                                <img src="/site/theme-assets/images/slider/main/01.jpg" alt="">
+                    <div class="swiper-wrapper">
+                        @foreach (var item in banners.Where(c => c.Position == Domain.Models.Enums.BannerPosition.Slide))
+                        {
+                            <div class="swiper-slide main-swiper-slide">
+                                <a href="@item.Link"
+                               style="background-image: url(/Images/banners/@item.ImageName);">
+                                    <img src="/Images/banners/@item.ImageName" alt="">
                                 </a>
-                                </div>*@
+                            </div>
+                        }
+                            
 
                         </div>
                         <!-- If we need pagination -->
-                    <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal swiper-pagination-bullets-dynamic" style="width: 80px;">
-                            <span class="swiper-pagination-bullet swiper-pagination-bullet-active-prev-prev" tabindex="0" role="button" aria-label="Go to slide 1" style="right: -8px;"></span>
-                            <span class="swiper-pagination-bullet swiper-pagination-bullet-active-prev" tabindex="0" role="button" aria-label="Go to slide 2" style="right: -8px;"></span>
-                            <span class="swiper-pagination-bullet swiper-pagination-bullet-active swiper-pagination-bullet-active-main" tabindex="0" role="button" aria-label="Go to slide 3" style="right: -8px;" aria-current="true"></span>
-                            <span class="swiper-pagination-bullet swiper-pagination-bullet-active-next" tabindex="0" role="button" aria-label="Go to slide 4" style="right: -8px;"></span>
-                        </div>
+                    <div class="swiper-pagination"></div>
 
                         <!-- If we need navigation buttons -->
-                    <div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-be3e2a4e94ad7158" aria-disabled="false"></div>
-                        <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-be3e2a4e94ad7158" aria-disabled="false"></div>
-                        <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+                    <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
                     </div>
                     <!-- end of main-slider -->
             </div>
             }
-            
+
             <div class="col-lg-4">
                 <div class="row">
-                    @if (banners!=null&&banners.Any(c => c.Position == Domain.Models.Enums.BannerPosition.RightUP))
+                    @if (banners != null && banners.Any(c => c.Position == Domain.Models.Enums.BannerPosition.RightUP))
                     {
-                        
-                    <div class="col-lg-12 col-6 mb-lg-3">
-                        <!-- start of banner -->
-                        <div class="banner-img banner-side-main-slider bg-position-right">
-                            <a href="@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.RightUP).Link)" style="background-image: url(/Images/banners/@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.RightUP).ImageName));height:220px;">
-                                <img src="/Images/banners/@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.RightUP).ImageName)" alt="">
-                            </a>
-                        </div>
-                        <!-- end of banner -->
+
+                        <div class="col-lg-12 col-6 mb-lg-3">
+                            <!-- start of banner -->
+                        <div class="banner-img banner-side-main bg-position-right">
+                                <a href="@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.RightUP).Link" style="background-image: url(/Images/banners/@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.RightUP).ImageName));height:220px;">
+                                    <img src="/Images/banners/@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.RightUP).ImageName" alt="">
+                                </a>
+                            </div>
+                            <!-- end of banner -->
                     </div>
                     }
 
-                      @if (banners!=null&&banners.Any(c => c.Position == Domain.Models.Enums.BannerPosition.RightDown))
+                    @if (banners != null && banners.Any(c => c.Position == Domain.Models.Enums.BannerPosition.RightDown))
                     {
                         <div class="col-lg-12 col-6">
                             <!-- start of banner -->
                         <div class="banner-img banner-side-main-slider bg-position-right">
-                                <a href="@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.RightDown).Link)" style="background-image: url(/Images/banners/@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.RightDown).ImageName));height:220px;">
-                                    <img src="/Images/banners/@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.RightDown).ImageName)" alt="">
+                                <a href="@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.RightDown).Link" style="background-image: url(/Images/banners/@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.RightDown).ImageName));height:220px;">
+                                    <img src="/Images/banners/@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.RightDown).ImageName" alt="">
                                 </a>
                             </div>
                             <!-- end of banner -->
@@ -89,16 +80,16 @@
         </div>
 
         <div class="row mb-5">
-            @if (banners!=null&&banners.Any(c => c.Position == Domain.Models.Enums.BannerPosition.BottomRight))
+            @if (banners != null && banners.Any(c => c.Position == Domain.Models.Enums.BannerPosition.BottomRight))
             {
                 <div class="col-md-6 mb-lg-0 mb-3">
                     <!-- start of banner -->
                 <div class="banner-img">
-                    <a href="@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.BottomRight).Link)">
-                        <img src="/Images/banners/@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.BottomRight).ImageName)" alt="">
-                    </a>
-                </div>
-                <!-- end of banner -->
+                        <a href="@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.BottomRight).Link">
+                            <img src="/Images/banners/@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.BottomRight).ImageName" alt="">
+                        </a>
+                    </div>
+                    <!-- end of banner -->
             </div>
             }
             @if (banners != null && banners.Any(c => c.Position == Domain.Models.Enums.BannerPosition.BottomLeft))
@@ -106,11 +97,11 @@
                 <div class="col-md-6 mb-lg-0 mb-3">
                     <!-- start of banner -->
                 <div class="banner-img">
-                    <a href="@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.BottomLeft).Link)">
-                        <img src="/Images/banners/@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.BottomLeft).ImageName)" alt="">
-                    </a>
-                </div>
-                <!-- end of banner -->
+                        <a href="@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.BottomLeft).Link">
+                            <img src="/Images/banners/@banners.FirstOrDefault(c=>c.Position == Domain.Models.Enums.BannerPosition.BottomLeft).ImageName" alt="">
+                        </a>
+                    </div>
+                    <!-- end of banner -->
             </div>
             }
         </div>
