--- a/Eshop/Areas/Admin/Views/Banner/BannerManger.cshtml
+++ b/Eshop/Areas/Admin/Views/Banner/BannerManger.cshtml
@@ -39,6 +39,7 @@
                             <label>
                                <select class="select2" asp-for="Position" asp-items="@Html.GetEnumSelectList(typeof(BannerPosition))"></select>
                                 <span class="text">موقعیت بنر</span>
+                                <span asp-validation-for="Position" class="text-danger" ></span>
                             </label>
                         </div>
                          <div class="select2">
