--- a/Eshop/Areas/Admin/Views/Home/LoggingUserLogin.cshtml
+++ b/Eshop/Areas/Admin/Views/Home/LoggingUserLogin.cshtml
@@ -6,7 +6,7 @@
         <div style="margin-top: 110px" class="col-xs-12 col-md-12">
             <div class="widget">
                 <div class="widget-header ">
-                    <span class="widget-caption">Simple DataTable</span>
+                    <span class="widget-caption">گزارشات ورود و خروج کاربران</span>
                     <div class="widget-buttons">
                         <a href="#" data-toggle="maximize">
                             <i class="fa fa-expand"></i>
