--- a/Eshop/Areas/Admin/Views/Home/Logs.cshtml
+++ b/Eshop/Areas/Admin/Views/Home/Logs.cshtml
@@ -24,7 +24,7 @@
                        
                         <div id="simpledatatable_filter" class="dataTables_filter"><label>
                            
-                            <a href="" class="btn btn-maroon">گزارش ورود کابران</a>
+                            <a href="/Admin/UserLogs" class="btn btn-maroon">گزارش ورود کابران</a>
                         </label></div>
 
                         <div id="simpledatatable_filter" class="dataTables_filter"><label>
