--- a/Eshop/Views/Product/Index.cshtml
+++ b/Eshop/Views/Product/Index.cshtml
@@ -979,7 +979,7 @@
                             </div>
                             <!-- end of filter-comments -->
                             <!-- start of comments -->
-                            @await Component.InvokeAsync("ShowComment",@Model.Id)
+                            @await Component.InvokeAsync("ShowComment",Model.Id)
 
                             <!-- end of comments -->
                         </div>
