--- a/Eshop/Views/Product/Index.cshtml
+++ b/Eshop/Views/Product/Index.cshtml
@@ -28,6 +28,7 @@
             <div class="row">
                 @if (ViewBag.Comment != null)
                 {
+                    <partial name="_SuccessAlertToastr" />
                     <div class="alert alert-success">
                         <p class="help-block">دیدگاه شما با ثبت شد</p>
                     </div>
