--- a/Eshop/Views/Shared/_Style.cshtml
+++ b/Eshop/Views/Shared/_Style.cshtml
@@ -1,12 +1,19 @@
-﻿  <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#2962ff">
-    <meta name="msapplication-navbutton-color" content="#2962ff">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#2962ff">
-    <title>YektaKala | home v1</title>
-    <link rel="stylesheet" href="/site/theme-assets/css/dependencies.css">
-    <link rel="stylesheet" href="/site/theme-assets/css/theme.css">
-  <link rel="stylesheet" href="/site/theme-assets/css/custom.css">
-  <link rel="stylesheet" href="/css/kamadatepicker.scss">
-  <link rel="stylesheet" href="/css/kamadatepicker.min.css">
+﻿<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="theme-color" content="#2962ff">
+<meta name="msapplication-navbutton-color" content="#2962ff">
+<meta name="apple-mobile-web-app-status-bar-style" content="#2962ff">
+<title>YektaKala | home v1</title>
+<link rel="stylesheet" href="/site/theme-assets/css/dependencies.css">
+<link rel="stylesheet" href="/site/theme-assets/css/theme.css">
+<link rel="stylesheet" href="/site/theme-assets/css/custom.css">
+<link rel="stylesheet" href="/css/kamadatepicker.scss">
+<link rel="stylesheet" href="/css/kamadatepicker.min.css">
+
+
+<link href="/css/vendors.min.css" rel="stylesheet" />
+<link href="/css/components.css" rel="stylesheet" />
+<link href="/css/animate.css" rel="stylesheet" />
+<link href="/css/sweetalert2.min.css" rel="stylesheet" />
+<link href="/css/toastr.css" rel="stylesheet" />
