Nullable Plus Price And Add To Cart From Detail

--- a/Eshop/Views/Product/Index.cshtml
+++ b/Eshop/Views/Product/Index.cshtml
@@ -29,9 +29,6 @@
                 @if (ViewBag.Comment != null)
                 {
                    <div id="notificationSweetAlert"> <partial name="_SuccessAlertToastr" /></div>
-                   @* <div class="alert alert-success">
-                        <p class="help-block">دیدگاه شما با ثبت شد</p>
-                    </div>*@
                 }
                 <div class="col-lg-4 col-md-5 mb-md-0 mb-4">
                     <div class="ui-sticky ui-sticky-top">
@@ -272,7 +269,7 @@
                             </div>
                         </div>
                         <div class="product-seller--add-to-cart">
-                            <a href="#" class="btn btn-primary w-100" data-toast="" data-toast-type="success" data-toast-color="green" data-toast-position="topRight" data-toast-icon="ri-check-fill" data-toast-title="موفق!" data-toast-message="به سبد اضافه شد!">
+                            <a href="/profile/BuyProduct/@Model.Id" class="btn btn-primary w-100" data-toast="" data-toast-type="success" data-toast-color="green" data-toast-position="topRight" data-toast-icon="ri-check-fill" data-toast-title="موفق!" data-toast-message="به سبد اضافه شد!">
                                 افزودن به سبد خرید
                             </a>
                         </div>
