--- a/Eshop/Views/Product/Index.cshtml
+++ b/Eshop/Views/Product/Index.cshtml
@@ -386,7 +386,7 @@
                                                     <a href="#" data-bs-toggle="tooltip" data-bs-placement="top" title="" data-bs-original-title="مشاهده سریع" aria-label="مشاهده سریع" data-remodal-target="quick-view-modal"><i class="ri-search-line"></i></a>
                                                 </li>
                                                 <li>
-                                                    <a href="#" data-bs-toggle="tooltip" data-bs-placement="top" title="" data-bs-original-title="افزودن به علاقمندی" aria-label="افزودن به علاقمندی"><i class="ri-heart-3-line"></i></a>
+                                                    <a href="/AddFavoriteProduct/@Model.Id" data-bs-toggle="tooltip" data-bs-placement="top" title="" data-bs-original-title="افزودن به علاقمندی" aria-label="افزودن به علاقمندی"><i class="ri-heart-3-line"></i></a>
                                                 </li>
                                             </ul>
                                         </div>
