--- a/Eshop/Views/Shared/_ProductCart.cshtml
+++ b/Eshop/Views/Shared/_ProductCart.cshtml
@@ -27,7 +27,7 @@
             <div class="d-flex align-items-center justify-content-between border-top mt-2 py-2">
                 <div class="product-actions">
                     <ul>
-                        <li><a href="/AddFavoriteProduct/@Model.ProductId" data-bs-toggle="tooltip" data-bs-placement="top" title="" data-bs-original-title="افزودن به سبد خرید" aria-label="افزودن به سبد خرید"><i class="ri-shopping-cart-line"></i></a></li>
+                        <li><a href="/profile/BuyProduct/@Model.ProductId" data-bs-toggle="tooltip" data-bs-placement="top" title="" data-bs-original-title="افزودن به سبد خرید" aria-label="افزودن به سبد خرید"><i class="ri-shopping-cart-line"></i></a></li>
                         <li>
                             <a href="#" data-bs-toggle="tooltip" data-bs-placement="top" title="" data-bs-original-title="مشاهده سریع" aria-label="مشاهده سریع" data-remodal-target="quick-view-modal"><i class="ri-search-line"></i></a>
                         </li>
@@ -37,12 +37,11 @@
                     </ul>
                 </div>
                 <div class="product-rating fa-num">
-                    @await Component.InvokeAsync("GetVotes",Model.ProductId)
+                    <i class="ri-star-fill star"></i>
+                    <strong>۴.۴</strong>
+                    <span>(۴۳۶)</span>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-   
